gccida/g0/doloop_modify
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/doloop_modify/src/doloop.c:913:12: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
if ( ( rtx)condition[1] == const_int_rtx[64] ) 
           ^~~~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/doloop_modify/src/doloop.c:917:17: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
else if ( ( rtx)condition[1] != const_int_rtx[65] ) 
                ^~~~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/doloop_modify/src/doloop.c:926:12: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
if ( ( rtx)condition[1] != const_int_rtx[64] ) 
           ^~~~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/doloop_modify/src/doloop.c:944:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)*( ( unsigned __int8 *)counter_reg + 2), 
  ^
4 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/doloop_modify/src/obj/doloop.o] Error 1
